[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = { version = "0.53.1", features = ["async", "tokio"] }
clap = { version = "4.5.20", features = ["derive"] }
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
